# Made-in-Ghana

./: pyproject.toml
api/: main.py
api/core/: config.py
api/database/: db_session.py
api/general_pages/: route_homepage.py
