[tool.poetry]
name = "madeinghana"
version = "0.1.0"
description = "An ecommerce website for small up and coming firms in Ghana"
authors = ["Kojo Kwakye <kodeon6@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68"
sqlalchemy = "^1.4"
psycopg2 = "^2.9"
uvicorn = "^0.15"
pydantic = "^1.8"
aiofiles = "^23.2.1"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
